k8s/namespace-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    app: porty
    env: prod
