k8s/mssql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql
  labels:
    app: mssql
spec:
  type: NodePort
  selector:
    app: mssql
  ports:
    - name: tds
      port: 1433
      targetPort: 1433
      nodePort: ${NODEPORT}   # défini par envsubst dans la CI/CD

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mssql
  labels:
    app: mssql
spec:
  serviceName: mssql
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2022-latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1433
          resources:
            requests:
              cpu: "250m"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "2Gi"
          volumeMounts:
            - name: data
              mountPath: /var/opt/mssql
          readinessProbe:
            tcpSocket: { port: 1433 }
            periodSeconds: 5
            initialDelaySeconds: 10
          livenessProbe:
            tcpSocket: { port: 1433 }
            periodSeconds: 10
            initialDelaySeconds: 30
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
