k8s/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: porty-front
  labels:
    app: porty-front
spec:
  selector:
    app: porty-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
