k8s/ingress-prod-front-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: porty-prod-front-http
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: romainmurier.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: porty-front
                port:
                  number: 80
    - host: www.romainmurier.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: porty-front
                port:
                  number: 80
