k8s/ingress-prod-front.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: porty-prod-front
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  tls:
    - hosts: ["murierromain.com","www.murierromain.com"]
      secretName: porty-prod-tls
  rules:
    - host: murierromain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: porty-front
                port:
                  number: 80
    - host: www.murierromain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: porty-front
                port:
                  number: 80
