k8s/ingress-staging-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: porty-staging-api
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: test.romainmurier.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: porty
                port:
                  number: 80
